--- a/DevMinds/DevMinds/styles/home.css
+++ b/DevMinds/DevMinds/styles/home.css
@@ -45,7 +45,7 @@ a:hover {
 
 .slide:nth-child(1) {
     background: linear-gradient(rgba(0,0,0,1), rgba(0,0,0,0.5)), 
-                url('/DevMinds/img/banner-1.png') center/cover;
+                url('./DevMinds/img/banner-1.png') center/cover;
 }
 
 .slide:nth-child(2) {
